--- a/index.html
+++ b/index.html
@@ -409,8 +409,8 @@
           <!-- ISTRUZIONI -->
           <div class="form-line">
             <div class="text-block">
-
-              <strong>Come compilare: 📸 scatta, carica,🌱 identifica, invia</strong><br /><br />
+<div class="form-line">
+              <strong>Come compilare: 📸 scatta,🌱 identifica, invia</strong><br /><br />
               1. Carica <strong>una o due foto nitide</strong> della pianta (foglie, fiori o frutti ben visibili).<br />
               2. Clicca su <strong>“Identifica specie”</strong> per il riconoscimento automatico.
             </div>
